# vedruna-chatbot

./: .env.example  .gitignore  Dockerfile  README.md  README_CLIENT_ADAPTERS.md  README_PERSISTENCE.md  README_POLICY_AUTHORITY.md  README_TOOLS.md  docker-compose.yml  pyproject.toml
.github/workflows/: publish-container.yml
api/: dependencies.py  main.py
core/: __init__.py  clients.py  config.py
docs/: ADAPTER_TEMPLATE.md  CALLBOT_CONVERSATION_RELAY_RUNBOOK.md  CONVERSATION_AUTHORITY_CONTRACT.md  CONVERSATION_BYPASS_AUDIT.md  CONVERSATION_LATENCY_RUNBOOK.md  CONVERSATION_PANEL_STATUS_VEDRUNA.md  CORE_V2_COMPATIBILITY_AUDIT_VEDRUNA.md  EASYPANEL_DEPLOY_RUNBOOK.md  ELEVENLABS_NATIVE_AGENT_RUNBOOK.md  GOLDEN_FLOWS_VEDRUNA.md  MIGRATING_LEGACY_BOT_TO_CORE.md  PRODUCTION_POSTGRES_EASYPANEL_VEDRUNA.md  RPA_APPOINTMENTS_CONTRACT_VEDRUNA.md  SMP_AUTHORITY_LEARNINGS_TO_CORE.md  SMP_LEARNINGS_TO_CORE_CAPABILITIES.md  STATE_OF_TRUTH_VEDRUNA.md  VEDRUNA_DOMAIN_SCHEMA.md
prompts/: base_agent.md  channel_voice.md  channel_whatsapp.md  privacy_policy.md  safety_policy.md  tool_policy.md
tests/: test_anti_loop_and_corrections.py  test_chat_confirmation.py  test_core_capabilities.py  test_elevenlabs_custom_llm.py  test_elevenlabs_native_agent.py  test_golden_runner.py  test_guardrails.py  test_health.py  test_n8n_adapter.py  test_orchestrator.py  test_persistence.py  test_policy_architecture.py  test_prompts_and_flags.py  test_retrieval.py  test_tool_safety.py  test_tools_policy.py  test_twilio_webhooks.py  test_vedruna_dates.py  test_vedruna_latency.py  vedruna_helpers.py
(+116 files in other folders)
