[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vedruna-chatbot"
version = "0.1.0"
description = "Chatbot and callbot adapter for Clinica Madre Vedruna and Clinica Santa Isabel."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "openai>=1.51",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "PyYAML>=6.0",
  "SQLAlchemy>=2.0",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.3",
  "ruff>=0.6",
]
postgres = [
  "psycopg[binary]>=3.2",
]

[tool.setuptools.packages.find]
include = ["api*", "core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 96
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
